--- a/appspec.json
+++ b/appspec.json
@@ -74,7 +74,7 @@
       "lastName": "Morelle",
       "email": "kmorelle@ab.mpg.de",
       "roles": ["author","contributor"],
-      "orcid": null,
+      "orcid": "0000-0001-9041-6541",
       "affiliation": "Max-Planck-Institute of Animal Behavior",
       "affiliationRor": "https://ror.org/026stee22"
     }
